--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/bcryptjs": "^3.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.16.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
