--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
+    "motion": "^12.23.3",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
